--- a/client/package.json
+++ b/client/package.json
@@ -6,14 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "apexcharts": "^3.44.0",
     "cors": "^2.8.5",
+    "create-vite": "^5.0.0",
+    "express": "^4.18.2",
     "formik": "^2.4.5",
     "next-connect": "^1.0.0",
+    "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
